--- a/test-site/index.html
+++ b/test-site/index.html
@@ -2,29 +2,27 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>My bio</title>
     <link href="styles/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
   </head>
   <body>
     <img src="images\Taylor Furman Headshot (02-25-2021) 2.png" alt="My headshot">
-    <h1>My main title</h1>
-<h2>My top level heading</h2>
-<h3>My subheading</h3>
-<h4>My sub-subheading</h4>
-<p>At Mozilla, we’re a global community of</p>
+    <h1 id = "nameID">Taylor Furman</h1>
+<h2 id = "aboutMe">About me:</h2>
+<h3 id = "description">Hello!  My name is Taylor, and I first started to program in college using MatLab.  After graduating I took a small hiatus from programing to focus on other things, but slowly started to come back using "freecodecamp.org." I am excited to take my programing experiance to the next level and expand my skill set.</h3>
 
+<p id = "aboutMe">Other things about me:</p>
 <ul>
-  <li>technologists</li>
-  <li>thinkers</li>
-  <li>builders</li>
+  <li>Lifelong video gamer</li>
+  <li>Distance runner</li>
+  <li>Vinyl record collector</li>
+  <li>Home beer brewer</li>
+  <li>Texas A&M University at Galveston graduate</li>
+  <li><a href="https://www.linkedin.com/in/taylor-furman47/">See my linkedin profile</li>
 </ul>
 
-<p>working together ... </p>
-
-<a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a>
-<button>Change user</button>
 <script src="scripts/main.js"></script>
   </body>
 </html>
